--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy to Vercel
+name: Deploy to Cloudflare
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 9/12 * * *"
+    - cron: "0 9 * * *"
   push:
     branches:
       - main
@@ -10,11 +10,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: amondnet/vercel-action@v20
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          vercel-args: "--prod"
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          working-directory: ./
+          go-version: 1.18
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - run: go run ./build/build.go
+
+      - name: Deploy to Cloudflare
+        run: npx wrangler pages publish --project-name=feed static
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: static
+          path: static
